--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2024 07:02:34</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2024 07:33:20</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -127,20 +127,11 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="item js-bookmark">
 <a class="link js-bookmark-switcher" href="#day_23110">Středa 28. 08.</a>
 </div>
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_23111">Čtvrtek 29. 08.</a>
+</div>
 </div>
 <table class="list js-bookmark-block" id="day_23110">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Drůbeží vývar </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s masem, zeleninou a nudlemi                               
-                               
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
 <tr>
 <td class="volume">200g</td>
 <td class="name">
@@ -190,6 +181,30 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         199 Kč    </td>
+</tr>
+</table>
+<table class="list js-bookmark-block" id="day_23111" style="display:table;">
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Italské smetanové rizoto </span>
+<span class="allergen">(A: 7)</span>
+<p class="desc">s filírovanou vepřovou panenkou a parmazánem</p>
+</td>
+<td class="price cond">
+        189 Kč    </td>
+</tr>
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Drůbeží vývar </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">s masem, zeleninou a nudlemi                               
+                               
+</p>
+</td>
+<td class="price cond">
+        55 Kč    </td>
 </tr>
 </table>
 </div>
