--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2024 07:33:20</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.08.2024 08:04:03</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -124,50 +124,59 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23110">Středa 28. 08.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_23111">Čtvrtek 29. 08.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_23110">
+<table class="list js-bookmark-block" id="day_23111" style="display:table;">
 <tr>
-<td class="volume">200g</td>
+<td class="volume"></td>
 <td class="name">
-<span class="title cond">Španělský ptáček </span>
-<span class="allergen">(A: 1, 3, 10)</span>
-<p class="desc">s dušenou rýží                                                    </p>
+<span class="title cond">Drůbeží vývar </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">s masem, zeleninou a nudlemi                               
+                               
+</p>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Italské smetanové rizoto </span>
+<span class="allergen">(A: 7)</span>
+<p class="desc">s filírovanou vepřovou panenkou a parmazánem</p>
 </td>
 <td class="price cond">
         189 Kč    </td>
 </tr>
 <tr>
-<td class="volume">170g</td>
+<td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Mexická kuřecí směs </span>
-<span class="allergen">(A: 1, 3, 6, 7)</span>
-<p class="desc">s fazolemi, kukuřicí, kapií a pita chlebem</p>
+<span class="title cond">Kuřecí směs </span>
+<span class="allergen">(A: 1, 6, 11)</span>
+<p class="desc">s dušenou rýží </p>
 </td>
 <td class="price cond">
         169 Kč    </td>
 </tr>
 <tr>
-<td class="volume">150g</td>
+<td class="volume">200g</td>
 <td class="name">
-<span class="title cond">Smažený sýr Gouda </span>
-<span class="allergen">(A: 1, 3, 7, 10)</span>
-<p class="desc">s vařeným bramborem a tatarskou omáčkou</p>
+<span class="title cond">Caesar wrap </span>
+<span class="allergen">(A: 1, 3, 4, 7)</span>
+<p class="desc">s kuřecím masem a zeleninou, hranolky </p>
 </td>
 <td class="price cond">
         179 Kč    </td>
 </tr>
 <tr>
-<td class="volume">350g</td>
+<td class="volume">200g</td>
 <td class="name">
-<span class="title cond">Fusilli s bazalkovou omáčkou,</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">kuřecím masem a parmazánem</p>
+<span class="title cond">Kuřecí paličky ala bažant, </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">mačkané cibulové brambory</p>
 </td>
 <td class="price cond">
         169 Kč    </td>
@@ -181,30 +190,6 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         199 Kč    </td>
-</tr>
-</table>
-<table class="list js-bookmark-block" id="day_23111" style="display:table;">
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Italské smetanové rizoto </span>
-<span class="allergen">(A: 7)</span>
-<p class="desc">s filírovanou vepřovou panenkou a parmazánem</p>
-</td>
-<td class="price cond">
-        189 Kč    </td>
-</tr>
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Drůbeží vývar </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s masem, zeleninou a nudlemi                               
-                               
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
 </tr>
 </table>
 </div>
