Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.09.2024 07:02:51</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.09.2024 07:33:39</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -127,17 +127,11 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="item js-bookmark">
 <a class="link js-bookmark-switcher" href="#day_23159">Středa 04. 09.</a>
 </div>
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_23165">Čtvrtek 05. 09.</a>
+</div>
 </div>
 <table class="list js-bookmark-block" id="day_23159">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Staročeská bramboračka </span>
-<span class="allergen">(A: 1, 3, 9)</span>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
@@ -179,6 +173,27 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
         169 Kč    </td>
 </tr>
 </table>
+<table class="list js-bookmark-block" id="day_23165" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Staročeská bramboračka </span>
+<span class="allergen">(A: 1, 3, 9)</span>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Přírodní hovězí pečeně na cibulovém základu</span>
+<span class="allergen">(A: 1)</span>
+<p class="desc">s dušenou rýží</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
@@ -201,7 +216,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="CSAntal"></section><a href="#top">&#8635;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-None
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Kapustová</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Pečené vepřové koleno na česneku, bramborové knedlíky</td><td>155 Kč</td></tr><tr><td>100g Pečený hermelín s kořením, šťouchané brambory, brusinky</td><td>149 Kč</td></tr><tr><td>200g Kuřecí prsa s majonézou, pepřem a cibulí, Pečené brambory</td><td>165 Kč</td></tr><tr><td>150g Bavorská klobása, hořčice, křen, chléb</td><td>115 Kč</td></tr><tr><td><h3>Buffet samoobslužný na váhu - ITÁLIE</h3></td><td> </td></tr><tr><td>Smažená rýže s nudlemi, rozinkami, mandlemi a kořením</td><td> </td></tr><tr><td>Pečený lilek s cuketou a paprikami</td><td> </td></tr><tr><td>Dýňová Caponata s parmazánem</td><td> </td></tr><tr><td>Gratinovaný květák v sýrové omáčce</td><td> </td></tr><tr><td>Kuřecí caciatora</td><td> </td></tr><tr><td>Jasmínová rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td> </td></tr><tr><td>domácí těstoviny připravované na objednávku 150g / 300g:</td><td>145 Kč</td></tr><tr><td>Arrabiata (sugo, cibule, česnek, chilli, petržel) strouhaná permezán</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
