--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.09.2024 07:33:39</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.09.2024 08:03:28</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -124,55 +124,10 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23159">Středa 04. 09.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_23165">Čtvrtek 05. 09.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_23159">
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí medailonky TIKKA MASALA</span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">s dušenou rýží                                                   </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Trhané vepřové maso </span>
-<span class="allergen">(A: 6)</span>
-<p class="desc">v BBQ omáčce, hranolky</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">200g</td>
-<td class="name">
-<span class="title cond">Holandský řízek </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s bramborovou kaší a kyselou okurkou    </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Pečená kuřecí křidélka ve sweet chilli omáčce, </span>
-<span class="allergen">(A: 1, 3, 7, 11)</span>
-<p class="desc">salát coleslaw a bylinková bageta </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-</table>
 <table class="list js-bookmark-block" id="day_23165" style="display:table;">
 <tr>
 <td class="volume"></td>
@@ -192,6 +147,46 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">180g</td>
+<td class="name">
+<span class="title cond">Kuřecí Cordon bleu </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">s cibulovým šťouchaným bramborem</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">Penne ARRABBIATA</span>
+<span class="allergen">(A: 1, 3, 7, 10)</span>
+<p class="desc">s vepřovou panenkou a parmazánem</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">Čočka na kyselo </span>
+<span class="allergen">(A: 1, 3)</span>
+<p class="desc">s klobásou a sázeným vejcem</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">160g</td>
+<td class="name">
+<span class="title cond">Hovězí CHILLI BURGER </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">se salátem, cibulovým chutney, grilovanými paprikami, chilli a čedarem, hranolky, tatarská omáčka</p>
+</td>
+<td class="price cond">
+        199 Kč    </td>
 </tr>
 </table>
 </div>
